--- a/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/mj/CH03_운영체제.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/3. Operating System/mj/CH03_운영체제.md
@@ -446,3 +446,243 @@
      - 운영체제는 프로세스가 자원을 요구할 때마다 그때 그때 자원을 할당하고 주기적으로 교착 상태의 발생 여부를 검사
      - 그러다가 교착 상태가 검출되면 프로세스를 자원 선점을 통해 회복시키거나, 교착 상태에 놓인 프로세스를 강제 종료함으로써 회복시킬 수 있음
        (자원 선점을 통한 회복: 교착 상태가 해결될 때까지 다른 프로세스로부터 강제로 자원을 빼앗아 한 프로세스에 몰아서 할당하는 것)
+
+
+# 4. CPU 스케줄링
+
+> 운영체제의 CPU 배분 방법 → CPU 스케줄링
+> 
+
+## 우선순위
+
+> CPU의 자원을 공정하게 배분하는 방법은 프로세스의 우선순위를 판단하기!
+> 
+- 우선순위가 높을 수록, CPU의 자원을 더 빨리, 많이 할당한다.
+- 사용자가 직접 높일 수도 있음!
+- 그럼 ‘할당 기준’은 어떻게 될까?
+    - `CPU 활용률`: 전체 CPU의 가동 시간 중 작업을 처리하는 시간의 비율
+        - 운영체제는 높은 CPU 활용률을 유지하기 위해 기본적으로 입출력 작업이 많은 프로세스의 우선순위를 높게 유지
+- CPU 버스트
+    - 대부분의 프로세스들은 CPU와 입출력장치를 모두 사용해 **실행과 대기 상태를 오가며 실행**
+    - `CPU 버스트`: 이때 프로세스가 CPU를 이용하는 작업 (입출력장치를 기다리는 작업: `입출력 버스트`)
+    - 프로세스마다 입출력장치를 이용하는 시간과 CPU 양에는 차이가 있음 (`입출력 집중 프로세스`, `CPU 집중 프로세스`)
+- 입출력 집중 프로세스와 CPU 집중 프로세스
+    - 입출력 집중 프로세스
+        - 실행 상태보다 입출력을 위한 대기 상태에 더 많이 머무름
+    - CPU 집중 프로세스
+        - 대기 상태보다 실행 상태에 더 많이 머무름
+    
+    → 각자 주로 머무르는 상태가 다르기 때문에 모든 프로세스가 동일한 시간의 빈도로 CPU를 사용하는 것은 합리적이지 않다!
+    
+    → 입출력 집중 프로세스를 가능한 빨리 실행시켜 끊임없이 입출력장치를 작동시킨 다음, CPU 집중 프로세스에 집중적으로 CPU를 할당하는 것이 더 합리적!
+    
+    **→ 그래서 입출력 집중 프로세스가 더 우선순위가 높음**
+    
+
+## 스케줄링 큐
+
+- 운영체제: 프로세스들아~ 자원을 이용하고 싶다면 줄을 서서 기다리렴~
+    - 이 줄은 ‘스케줄링 큐’를 통해 구현됨
+        - CPU를 이용하고 싶은 프로세스의 PCB
+        - 메모리로 적재되고 싶은 프로세스의 PCB
+        - 특정 입출력장치를 이용하고 싶은 프로세스의 PCB
+        - 큐에 삽입하여 줄 세우기!
+- **준비 큐와 대기 큐**
+    - 준비 큐: CPU를 이용하고 싶은 프로세스의 PCB가 서는 줄
+    - 대기 큐: 대기 상태에 접어든 프로세스의 PCB가 서는 줄
+- ex)
+입출력 작업을 수행 중일 경우, 대기 큐에서 대기 상태로 입출력 완료 인터럽트를 기다리게됨
+    
+    → 준비 상태인 프로세스의 PCB는 준비 큐의 마지막에 삽입되어 CPU를 사용할 차례를 기다림
+    
+
+![image.png](attachment:25c69df7-14b7-4799-be04-3a46366c775a:image.png)
+
+- 운영체제: 큐에 삽입된 순서로 실행한다~ 대신 우선순위 높은 애들 손 들어봐!
+    - 실행하다가 할당받은 시간 끝나면 준비 큐로 가라~
+    - 실행하다가 입출력 작업 수행해야하면 대기 큐로 가라~
+    - 같은 입출력장치 요구한 애들은 대기 큐에서 기다리다가 입출력 완료됐다고 완료 인터럽트 발생하면, 대기 큐에서 완료된 애들부터 준비 상태로 바꿔주고 대기 큐에서 나와서 준비 큐로 가면 됨~
+    
+
+### 선점형 스케줄링과 비선점형 스케줄링
+
+> 스케줄링은 기본적으로 프로세스의 실행이 끝나면 이루어져. 근데? 프로세스가 종료되지 않았어도 스케줄링이 수행될 수 있냐? 2가지 경우가 있다.
+> 
+1. 실행 상태 → 대기 상태 (입출력 작업)
+2. 실행 상태 → 준비 상태 (타이머 인터럽트)
+- `선점형 스케줄링`
+    - 현재 어떤 프로세스가 CPU를 할당받아 사용하고 있더라도 운영체제가 프로세스로부터 CPU 자원을 **강제로 빼앗아 다른 프로세스에 할당할 수 있는** 스케줄링
+        - 장점
+            - 한 프로세스의 CPU 독점을 막고 여러 프로세스에 골고루 CPU 자원을 배분할 수 있다.
+        - 단점
+            - 문맥 교환 과정에서 오버헤드 발생 가능
+- `비선점형 스케줄링`
+    - 어떤 프로세스가 CPU를 사용하고 있을 때 그 프로세스가 **종료되거나 스스로 대기 상태에 접어들기 전까지는** 다른 프로세스가 **끼어들 수 없는** 스케줄링 방식
+        - 장점
+            - 문맥 교환의 횟수가 적기 때문에 상대적으로 오버헤드의 발생은 적음
+        - 단점
+            - 당장 CPU를 사용해야하는 프로세스라도 무작정 기다릴 수 밖에 없음
+
+## CPU 스케줄링 알고리즘
+
+> 전통적인 스케줄링 알고리즘
+> 
+1. **선입 선처리 스케줄링 (`FCFS`, First Come First Served)**
+    - 단순히 **준비 큐에 삽입된 순서대로** 먼저 CPU를 요청한 프로세스부터 할당하는 스케줄링 방식
+    - 단점)
+        - 프로세스들이 기다리는 시간이 매우 길어질 수 있다는 부작용 → 호위 효과 (convoy effect)
+2. **최단 작업 우선 스케줄링 (`SJF`, Shortest Job First)**
+    - 준비 큐에 삽입된 프로세스 중 **CPU를 이용하는 시간의 길이가 가장 짧은 프로세스부터** 먼저 실행하는 스케줄링 방식
+    - 비선점형 스케줄링 알고리즘으로 분류 (최소 잔여 시간 우선 스케줄링처럼 선점형으로 구현될 수도)
+3. **라운드 로빈 스케줄링 (`RR`, Round Robin)**
+    - 선입 선처리 스케줄링(FCFS) + **타임 슬라이스**
+        - 타임 슬라이스: 프로세스가 CPU를 사용하도록 정해진 시간
+        - 프로세스가 정해진 시간을 모두 사용하고도 완료되지 않으면 문맥 교환이 발생해 다시 큐의 맨 뒤에 삽입된다.
+4. **최소 잔여 시간 우선 스케줄링 (`SRT`, Shortest Remaining Time)**
+    - 최단 작업 우선(SJF) + 라운드 로빈(RR)
+    - 프로세스가 정해진 타임 슬라이스만큼 CPU를 이용하되, 남아있는 작업시간이 가장 적은 프로세스를 CPU를 이용할 프로세스로 선택한다
+5. **우선순위 스케줄링 (Prioirity)**
+    - 프로세스에 우선순위를 부여하고, 가장 높은 우선순위를 가진 프로세스부터 실행하는 스케줄링 방식
+    - 단점)
+        - `아사` 현상 (starvation)
+            - 우선순위가 낮은 프로세스는 준비 큐에 먼저 삽입되었더라도 우선순위가 높은 프로세스로 인해 계속해서 실행이 연기 될 수 있다.
+        - 방지) `에이징`
+            - 오랫동안 대기한 프로세스의 우선순위를 점차 높이는 방식
+6. **다단계 큐 스케줄링 (multilevel queue)**
+    - 우선순위 스케줄링의 발전된 형태, **우선순위별로 여러 개의 준비 큐**를 사용하는 스케줄링 방식
+    - 우선순위가 가장 높은 큐에 있는 프로세스를 먼저 처리하고, 우선순위가 가장 높은 큐가 비어 있게 되면, 그 다음으로 우선순위가 높은 큐에 있는 프로세스를 처리
+    - 단점)
+        - 프로세스들이 큐 사이를 이동할 수 없기 때문에 우선순위가 **낮은 프로세스의 작업이 계속해서 연기될** 수 있다
+7. **다단계 피드백 큐 스케줄링 (multilevel feedback queue)**
+    - 다단계 큐 스케줄링과 비슷하지만, 프로세스들이 큐 사이를 이동할 수 있다.
+        - 새롭게 진입하는 프로세스는 먼저 우선순위가 가장 높은 우선순위 큐에 삽입되고, 타임 슬라이스 동안 실행된다.
+        - 해당 큐에서 프로세스의 실행이 끝나지 않으면 다음 우선순위 큐에 삽입되어 실행된다.
+            
+            → **결국 오래 CPU를 사용해야하는 프로세스의 우선순위는 점차 낮아짐**
+            
+    - 아사 현상을 방지하기 위해 낮은 우선순위 큐에서 오래 기다리고 있는 프로세스들을 높은 우선순위 큐로 이동시키는 에이징 기법을 적용할 수도 있음
+
+> 실제로는 단일한 CPU 스케줄링 알고리즘이 적용되거나, 타임 슬라이스는 고정된 값으로 동일하게 할당되지 않을 수도 있다! (가중치에 따라 달라질 수도)
+> 
+- 리눅스 CPU 스케줄링
+    - SCHED_FIFO, SCHED_RR → 실시간 프로세스에 적용
+    - SCHED_NORMAL → 일반적인 프로세스에 적용
+        - `CFS`(Completely Fair Scheduler)
+            - 완전히 공평한 CPU 시간 배분을 지향하는 CPU 스케줄러
+            - `vruntime`(가중치를 고려한 가상 실행 시간)이 가장 작은 프로세스부터 스케줄링
+            - vruntime이 가장 작은 프로세스를 빠르게 선별할 수 있어야하는데 이때 RB트리를 활용
+    - SCHED_BATCH
+    - SCHED_IDLE
+
+# 5. 가상 메모리
+
+> CPU와 프로세스가 메모리 몇 번지에 무엇이 저장되어있는지 다 알고있을까?
+실시간으로 바뀌는 메모리 정보를 어떻게 인식하고 관리할까?
+> 
+
+## 물리 주소와 논리 주소
+
+- CPU와 프로세스는 메모리의 하드웨어 상 실제 주소인 물리 주소가 아닌 ‘논리 주소’를 사용한다.
+- 논리주소: 프로세스마다 부여되는 0번지부터 시작하는 주소 체계. 중복되는 논리 주소의 번지 수는 얼마든지 존재할 수 있다.
+- 논리 주소 → `MMU(메모리 관리 장치)` → 물리주소
+    - MMU (MEMORY Management Unit)은 CPU와 메모리 사이에서 논리주소를 물리주소로 변환해준다!
+
+## 스와핑과 연속 메모리 할당
+
+### 스와핑
+
+> 현재 실행되지 않는 프로세스 (대기 상태가 되었거나 오랫동안 사용되지 않은 프로세스)를 임시로 스왑 영역이라는 보조기억장치의 일부인 영역으로 쫓아내고, 프로세스를 쫓아낸 자리에 생긴 메모리 상의 빈 공간에 다른 프로세스를 적재하여 실행하는 메모리 관리 방식
+> 
+- 스왑 아웃: 현재 실행되지 않는 프로세스가 메모리 → 스왑 영역으로 이동
+- 스왑 인: 스왑 영역에 있는 프로세스가 스왑 영역 → 메모리
+
+### 연속 메모리 할당과 외부 단편화
+
+- 연속 메모리 할당: 프로세스에 연속적인 메모리 공간을 할당하는 방식
+→ `외부 단편화` 발생 가능!!
+- 외부 단편화
+    - 프로세스들이 메모리에 연속적으로 할당되는 환경에서는 프로세스의 실행과 종료를 반복하며 메모리 사이 사이에 빈 공간이 생긴다.
+    - 빈 공간보다 큰 프로세스를 적재하기 어려운 상황을 초래하여 메모리 낭비로 이어지는 현상
+        
+        (빈 공간의 총합이 50MB라도 30+20MB면 사실 크기가 50MB인 프로세스를 적재하기 힘듦)| 
+        
+
+> 스와핑과 연속 메모리 할당은
+1. 외부 단편화
+2. 물리 메모리보다 큰 프로세스를 실행할 수 없는 문제
+라는 문제가 있다! 이를 해결하기 위해 등장한 것이 → **`가상 메모리`**
+> 
+
+## 페이징을 통한 가상 메모리 관리
+
+- 가상 메모리: 실행하고자 하는 프로그램의 일부만 메모리에 적재해, 실제 메모리보다 더 큰 프로세스를 실행할 수 있도록 만드는 메모리 관리 기법
+- 보조기억장치의 일부를 메모리처럼 사용하거나 프로세스의 일부만 메모리에 적재함으로써 메모리를 실제 크기보다 더 크게 보이게 하는 기술
+
+> 가상 메모리 관리 기법
+1. 페이징
+2. 세그멘테이션
+> 
+
+- cf)세그멘테이션
+    
+    > 페이지 단위가 아닌 가변적인 크기의 세그먼트 단위로 분할하는 방식
+    > 
+    - 한 세그먼트는 코드 영역(의 일부)일 수도 있고 데이터 영역(의 일부)일 수도 있다. 세그멘테이션 기법을 이용하면 세그먼트의 크기가 일정하지 않기 때문에 외부 단편화가 발생할 수 있다.
+
+### 페이징
+
+> 프로세스의 논리 주소 공간을 **`페이지`**라는 일정한 단위로 나누고, 물리 주소 공간을 페이지와 동일한 크기의 **`프레임`**이라는 일정한 단위로 나눈 뒤, 페이지를 프레임에 할당하는 가상 메모리 관리 기법
+> 
+- 외부 단편화 발생하지않음!
+    - 페이지라는 일정한 크기로 잘린 프로세스들을 메모리에 불연속적으로 할당할 수 있다면 연속 메모리 할당처럼 프로세스 바깥에 빈 공간이 생길 수 없음!
+- **스와핑**
+    - 페이징 기법에서도 스와핑이 사용될 수 있다.
+    - 프로세스 전체가 스왑 아웃-스왑 인 되는 것이 아니라 **페이지 단위로 스왑 아웃/ 스왑 인** 된다.
+        
+        **(페이지 아웃 / 페이지 인)**
+        
+- `페이지 테이블`
+    - 프로세스의 페이지와 실제로 적재된 프레임을 짝지어주는 정보. 프로세스마다 각자의 페이지 테이블 정보를 갖고 있음
+    - 페이지 번호, 프레임 번호 (대응)
+- `테이블 엔트리`
+    - 페이지 테이블을 구성하고 있는 각각의 행
+    - 담고 있는 정보
+        - 페이지 번호, 프레임 번호
+        - 유효 비트, 보호 비트, 참조 비트, 수정 비트
+    - 유효 비트
+        - 현재 페이지가 메모리에 적재되어 있으면 →1
+        적재되어 있지 않다면 0
+        - CPU는 보조기억장치에 저장된 페이지에 곧장 접근할 수 없으므로 보조기억장치에 저장된 페이지에 접근하려면 보조기억장치 속 페이지를 메모리로 적재한 뒤에 접근해야함
+        - **`페이지 폴트`**: 유효 비트가 0인 페이지에 접근하려고 하면 예외 발생
+            
+            > 페이지 폴트 처리과정
+            > 
+            > 1. 기존 작업 내역 백업
+            > 2. 페이지 폴터 처리 루틴 실행 (원하는 페이지를 메모리로 가져와 유효 비트를 1로 변경)
+            > 3. 페이지 폴트 처리 루틴 실행 후 메모리에 적재된 페이지 실행
+    - 보호 비트
+        - rwx의 조합
+    - 참조 비트
+        - CPU가 해당 페이지에 접근한 적이 있는지의 여부
+    - 수정 비트 (더티 비트)
+        - 해당 페이지에 데이터를 쓴 적이 있는지의 여부
+        - 1인 경우, 페이지의 수정 내역을 보조기억장치에도 반영해 두어야 하므로 보조기억장치에 대한 쓰기 작업이 필요
+- `내부 단편화`
+    - 논리 주소 공간을 페이지라는 일정한 크기의 단위로 나누는 방식이지만 모든 프로세스가 페이지 크기에 딱 맞게잘리는 것이 아님
+    - **페이지 하나의 크기보다 작은 크기로 발생**하게 되는 메모리 낭비 → 내부 단편화
+- `페이지 테이블 베이스 레지스터(PTBR)`
+    - 프로세스를 실행하려면 프로세스의 페이지 테이블이 메모리에 적재된 위치를 알아야함
+    - 이 위치를 가리키는 레지스터가 PTBR
+    - 프로세스마다 가지는 정보이며, 각 PCB에 기록됨
+- 운영체제는 모든 페이지 테이블을 메모리에 적재하는 것을 가급적 지양
+    1. 메모리 접근 횟수
+        - TLB (페이지 테이블의 캐시 메모리)
+        - TLB 히트/미스
+    2. 메모리 용량
+        - 계층적 페이징 (다단계 페이지 테이블)
+            - Outer 페이지 테이블을 통해 페이지 테이블의 일부가 보조기억장치에 있더라도 언제든 접근 가능
+- 페이지 주소 체계
+
+## 페이지 교체 알고리즘
+
+# 6. 파일 시스템
